--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,3 +21,7 @@ repos:
     rev: v1.6.1
     hooks:
     -   id: mypy
+        additional_dependencies:
+          [
+            types-requests,
+          ]
