--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = top_plays
-version = 0.1.0
+version = 0.2.0
 description = Top plays of the day in NBA
 author = Vyacheslav Kapitonov
 classifiers =
@@ -10,7 +10,7 @@ classifiers =
 [options]
 py_modules = top_plays
 install_requires =
-    pytube
+    yt-dlp
     requests
 
 [mypy]
