--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = top_plays
-version = 0.2.0
+version = 0.2.1
 description = Top plays of the day in NBA
 author = Vyacheslav Kapitonov
 classifiers =
@@ -11,6 +11,10 @@ classifiers =
 py_modules = top_plays
 install_requires =
     requests
+
+[options.entry_points]
+console_scripts =
+    top-plays = top_plays:main
 
 [mypy]
 check_untyped_defs = true
