--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,9 @@
 [tox]
-envlist=py39,py310,py311,pre-commit
+envlist=py310,pre-commit
 
 [testenv]
 deps=pytest
-commands = pytest {posargs}
+commands = pytest {posargs:-v}
 
 [testenv:pre-commit]
 deps=pre-commit
