Move yt-dlp into setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -11,6 +11,7 @@ classifiers =
 py_modules = top_plays
 install_requires =
     requests
+    yt-dlp==2023.11.16
 
 [options.entry_points]
 console_scripts =
