--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,13 +6,11 @@ repos:
     -   id: end-of-file-fixer
     -   id: requirements-txt-fixer
     -   id: double-quote-string-fixer
+    -   id: check-json
 -   repo: https://github.com/PyCQA/flake8
     rev: 7.0.0
     hooks:
     -   id: flake8
-        args: [
-          --max-line-length=79
-        ]
 -   repo: https://github.com/asottile/reorder-python-imports
     rev: v3.12.0
     hooks:
