--- a/.github/workflows/new-videos.yaml
+++ b/.github/workflows/new-videos.yaml
@@ -28,7 +28,7 @@ jobs:
                   pre-commit run check-json --all-files
                   git config user.name "Automated"
                   git config user.email "actions@users.noreply.github.com"
-                  git add -u
+                  git add -A
                   timestamp=$(date --rfc-3339=seconds --utc)
                   git commit -m "Latest data: ${timestamp}" || exit 0
                   git push
