--- a/.github/workflows/new-videos.yaml
+++ b/.github/workflows/new-videos.yaml
@@ -39,5 +39,5 @@ jobs:
                   git config user.email "actions@users.noreply.github.com"
                   git add -A
                   timestamp=$(date --rfc-3339=seconds --utc)
-                  git commit -m "Latest data: ${timestamp}" || exit 0
+                  git commit -m "Latest data: ${timestamp}"
                   git remote set-url --push origin https://HeySlava:$GITHUB_TOKEN@github.com/top_plays
