--- a/.github/workflows/new-videos.yaml
+++ b/.github/workflows/new-videos.yaml
@@ -11,7 +11,6 @@ permissions:
 env:
   NBA_CHAT_ID: ${{ secrets.NBA_CHAT_ID }}
   NBA_TOKEN: ${{ secrets.NBA_TOKEN }}
-  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 jobs:
     scheduled:
@@ -29,16 +28,11 @@ jobs:
               run: top-plays
             - name: Run pre commit to fix json
               run: pre-commit run check-json --all-files
-            - name: View diff
-              run: git diff
-            - name: View diff files
-              run: git diff --name-only
-
             - name: Commit and push if changed
-              run: |-
+              run: |
                   git config user.name "Automated"
                   git config user.email "actions@users.noreply.github.com"
                   timestamp=$(date --rfc-3339=seconds --utc)
                   git add -u
                   git commit -m "Latest data: ${timestamp}"
-                  git remote set-url --push origin https://HeySlava:$GITHUB_TOKEN@github.com/top_plays
+                  git push
