--- a/.github/workflows/new-videos.yaml
+++ b/.github/workflows/new-videos.yaml
@@ -23,11 +23,9 @@ jobs:
                 python-version: '3.11'
             - name: Install package
               run: |-
-                  pip install . pre-commit
+                  pip install .
             - name: Run top-plays
               run: top-plays
-            - name: Run pre commit to fix json
-              run: pre-commit run end-of-file-fixer --all-files || exit 0
             - name: Commit and push if changed
               run: |
                   git config user.name "Automated"
