Rename project top_plays -> youtube-notify

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
-name = top_plays
+name = youtube_notify
 version = 0.2.4
-description = Top plays of the day in NBA
+description = Custom subscription for updates on YouTube channels
 author = Vyacheslav Kapitonov
 classifiers =
     Programming Language :: Python :: 3
@@ -15,7 +15,7 @@ install_requires =
 
 [options.entry_points]
 console_scripts =
-    top-plays = top_plays:main
+    youtube-notify = youtube_notify:main
 
 [mypy]
 check_untyped_defs = true
