Move config into separate file

--- a/setup.cfg
+++ b/setup.cfg
@@ -12,6 +12,7 @@ py_modules = top_plays
 install_requires =
     requests
     yt-dlp==2023.11.16
+    pyyaml
 
 [options.entry_points]
 console_scripts =
