--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -22,6 +22,7 @@ repos:
         additional_dependencies:
           [
             types-requests,
+            types-PyYAML,
           ]
 -   repo: https://github.com/asottile/yesqa
     rev: v1.5.0
