--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = youtube_notify
-version = 0.2.4
+version = 0.3.0
 description = Custom subscription for updates on YouTube channels
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -14,12 +14,12 @@ classifiers =
     Programming Language :: Python :: Implementation :: CPython
 
 [options]
-py_modules = top_plays
+py_modules = youtube_notify
 install_requires =
     pyyaml
     requests
     yt-dlp==2023.11.16
-python_requires = >=3.11
+python_requires = >=3.10
 
 [options.entry_points]
 console_scripts =
